--- a/djangoweb/website/templates/website/partials/_header.html
+++ b/djangoweb/website/templates/website/partials/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
 
     <!-- Menu Desktop -->
-    <nav class="container nav-desktop">
+    <nav class="nav-desktop container">
         <div class="logo">
             <a href="{% url "website:home" %}" class="logo-img" title="Gazil Equipamentos">
                 <img src="{{ site_setup.favicon.url }}" alt="Logo Gazil Equipamentos">
