--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -63,12 +63,26 @@ body {
     font-family: var(--font-body);
     line-height: 1.6;
     color: var(--color-primary);
+    margin: 0;
+    position: relative;
+    z-index: 0;
+}
+
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: var(--background-image-url);
     background-position: center 20%;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: auto;
+    z-index: -1;
 }
+    
 
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-title);
