Implementing breadcrumbs in HTML.

--- a/djangoweb/products/templates/products/index.html
+++ b/djangoweb/products/templates/products/index.html
@@ -3,6 +3,9 @@
 {% block content %}
     {% include "website/partials/_hero-content.html" %}
 
+    <div class="content-products">
+        {% include "website/partials/_breadcrumbs.html" %}
+    </div>
     <section class="categories">
         <h2 class="categories-title">Nossas Linhas de Produtos</h2>
         <p class="categories-subtitle">
