--- a/djangoweb/products/templates/products/list_products.html
+++ b/djangoweb/products/templates/products/list_products.html
@@ -5,6 +5,9 @@
 
     {% include "website/partials/_hero-content.html" %}
 
+    <div class="content-products">
+        {% include "website/partials/_breadcrumbs.html" %}
+    </div>
     <div class="content">
 
         <div class="list-product container">
