--- a/djangoweb/website/templates/website/pages/contacts.html
+++ b/djangoweb/website/templates/website/pages/contacts.html
@@ -11,7 +11,9 @@
 
     </section>
 
-
+    <div class="content-contacts">
+        {% include "website/partials/_breadcrumbs.html" %}
+    </div>
 
     <section class="contact-section">
 
