--- a/djangoweb/products/templates/products/detail_product.html
+++ b/djangoweb/products/templates/products/detail_product.html
@@ -5,6 +5,10 @@
 
     {% include "website/partials/_hero-content.html" %}
 
+    <div class="content-products">
+        {% include "website/partials/_breadcrumbs.html" %}
+    </div>
+
     <div class="content">
 
         <div class="product-detail-container container">
