--- a/djangoweb/website/templates/website/pages/who_we_are.html
+++ b/djangoweb/website/templates/website/pages/who_we_are.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 
+    <div class="content-who-are">
+        {% include "website/partials/_breadcrumbs.html" %}
+    </div>
+
     <section class="main-content">
 
         <main class="container about-page">
