Correcting the Whatsapp and Cart icon.

--- a/djangoweb/products/templates/products/list_products.html
+++ b/djangoweb/products/templates/products/list_products.html
@@ -112,7 +112,7 @@
                         {% endif %}
                     </h2>
                     <p>
-                       <strong>Entre em contato conosco agora pelo whatsapp 
+                       <strong>Entre em contato conosco agora pelo Whatsapp
                         <a href="http://wa.me/{{ site_setup.whatsapp_number }}?text="
                             target="_blank"
                             rel="noopener noreferrer"
